Fix TreeView horizontal scroll bar height

--- a/src/main/resources/com/example/textwrench/styles.css
+++ b/src/main/resources/com/example/textwrench/styles.css
@@ -87,23 +87,6 @@
     -fx-border-width: 1px 0 0 0;
 }
 
-/* Scrollbars */
-.scroll-bar:horizontal, .scroll-bar:vertical {
-    -fx-background-color: white;
-}
-
-.scroll-bar:horizontal .thumb,
-.scroll-bar:vertical .thumb {
-    -fx-background-color: #535353; /* Thumb color */
-}
-
-.scroll-bar:horizontal .increment-button,
-.scroll-bar:vertical .increment-button,
-.scroll-bar:horizontal .decrement-button,
-.scroll-bar:vertical .decrement-button {
-    -fx-background-color: #2a2a2a;
-}
-
 /* Project Explorer Pane */
 .project-explorer {
     -fx-background-color: #252526; /* Explorer background */
@@ -245,7 +228,7 @@
 .project-explorer .scroll-bar:horizontal{
     -fx-background-color: transparent;
     -fx-text-fill: black;
-    -fx-pref-width: 10px;
+    -fx-pref-height: 10px;
 }
 
 
